@@ -33,6 +33,7 @@ ShowSearchString=1
 ShowColHeader=0
 ShowColProcessName=0
 CheckForUpdates=Startup
+SystemTrayIconEnabled=1
 [Hotkeys]
 AltTabEnabled=1
 AltBacktickEnabled=1
